tests/baselines/reference/objectBindingPattern_restElementWithPropertyName.errors.txt
objectBindingPattern_restElementWithPropertyName.ts(1,15): error TS2566: A rest element cannot have a property name.


==== objectBindingPattern_restElementWithPropertyName.ts (1 errors) ====
    const { ...a: b } = {};
                  ~
!!! error TS2566: A rest element cannot have a property name.
    